After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677055 - gtkmenutoolbutton bug fixes
gtkmenutoolbutton bug fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-05-29 18:12 UTC by Bastien Nocera
Modified: 2012-05-30 16:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkmenutoolbutton: Remove unused variable (1.16 KB, patch)
2012-05-29 18:13 UTC, Bastien Nocera
committed Details | Review
gtkmenutoolbutton: Fix show-menu API docs (1014 bytes, patch)
2012-05-29 18:13 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-05-29 18:12:43 UTC
.
Comment 1 Bastien Nocera 2012-05-29 18:13:24 UTC
Created attachment 215209 [details] [review]
gtkmenutoolbutton: Remove unused variable

Set but unused.
Comment 2 Bastien Nocera 2012-05-29 18:13:36 UTC
Created attachment 215210 [details] [review]
gtkmenutoolbutton: Fix show-menu API docs

It's "set" not "get" that one needs to call to set the menu.
Comment 3 Matthias Clasen 2012-05-29 18:18:51 UTC
Review of attachment 215209 [details] [review]:

Sure
Comment 4 Matthias Clasen 2012-05-29 18:19:23 UTC
Review of attachment 215210 [details] [review]:

Of course