gtkmenutoolbutton: Remove unused variable

Set but unused.

https://bugzilla.gnome.org/show_bug.cgi?id=677055